--- a/.github/workflows/appveyor-status.yml
+++ b/.github/workflows/appveyor-status.yml
@@ -1,4 +1,4 @@
-# Copyright (C) Daniel Stenberg, <daniel@haxx.se>, et al.
+# Copyright (C) Andres Miranda Ortega, <andresmirandaramirez@icloud.com>, et al.
 #
 # SPDX-License-Identifier: curl
 
